force-app/main/default/objects/Chat_Context__c/Chat_Context__c.object-meta.xml
<CustomObject>
    <description>채팅 시작 시 사용자 컨텍스트를 임시 저장하는 객체</description>
    <label>Chat Context</label>
    <nameField>
        <displayFormat>CTX-{0000}</displayFormat>
        <label>Context Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>