force-app/main/default/objects/Chat_Context__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chat Contexts</relationshipLabel>
    <relationshipName>Chat_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>