force-app/main/default/objects/Chat_Context__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Chat Contexts</relationshipLabel>
    <relationshipName>Chat_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>