force-app/main/default/objects/Chat_Context__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chat Contexts</relationshipLabel>
    <relationshipName>Chat_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>