force-app/main/default/objects/Chat_Context__c/fields/Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Timestamp__c</fullName>
    <label>Created Timestamp</label>
    <type>DateTime</type>
</CustomField>